# Python

./: .gitignore  Doc.md  ERRORLIST.md  Git.md  GitBus.rst  INFO.md  INFO.rst  KNOWLODGE.md  Python-doc.txt  Q-A.md  QUESTIONS.md  README.md  Untitled.ipynb  bill.py  match.py  match_more.py  primnumber.py  pyproject.toml  search.md  sublime_spell.py  substr.py
1.Print/: example.py  name.py  print.py  python_version.py  rounds.py  split_name.py  strip_title.py  stripe.py  stripe_title.py  test_example.py
10.Tuple/: docs.md  sname.txt  temas.py  tupleParameter.py  tuple_5.py
11.Set/: Info.md  duplicate_set.py  lib_set.py  remove_det.py  set_clear.py  set_info.py
12.Dictionary/: README.md  build_dict.py  copy_to_dic.py  dict_list.py  lib_dict.py
2.Numbers/: bin_hex_oct_num.py  calculator.py  complex_num.py  deciamel.py  example.py  f_num.py  floats.py  inte.py  is_prime_v.py  is_prime_v2.py  is_prime_v3.py  nearst_number.py  none_bool.py  random_num.py
3.Function/: README.md  add_int.py  args_unpacking.py  argument_unpacking.py  boolian_func.py  build_func.py  (+37 more)
Jupyter/: Installation.rst  README.md  leason3.py  main.py  pyproject.toml  requirements.txt
Jupyter/numpy/: Numpy.md  numpy_data_science.ipynb  pn_sorting.ipynb  tutorials.ipynb
Jupyter/pandas/: convert_to_list.py  pn_sorting.ipynb
Jupyter/pandas/datas/: .~lock.mydata.csv#  mydata.csv
YouTube/: Calum Scott - Dancing On My Own (Official Video)-q31tGyBJhRY.mp4.part  convert_v_soundonly.py  dawonloadmovie.py  download_movie.py  pyproject.toml  requiredv-toaudio.md  requiredv-toaudio.text  youtube.py
(+1498 files in other folders)
