[tool.poetry]
name = "Python-tutorials"
version = "0.1.0"
description = ""
authors = ["DilshadGit <dilshad.a73@gmail.com>"]
license = "DA"

[tool.poetry.dependencies]
python = "^3.10"
pickle-mixin = "^1.0.2"
jsonlib-python3 = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
