[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pytz>=2025.2",
    "scikit-learn>=1.8.0",
    "tzdata>=2025.3",
]
